@@ -3,6 +3,11 @@ CHANGES IN FLTK 1.1.0b6
 	- Documentation updates...
 	- The configure script now works within the CygWin
 	  environment.
+	- Added new fl_beep() function to do audible
+	  notifications of various types.
+	- Fl_Float_Input and Fl_Int_Input no longer accept
+	  pasted text that is not a floating point or integer
+	  value.
 	- Implemented the Fl_File_Icon::load_png() method.
 	- The Fl_File_Icon::load_system_icons() method now
 	  supports KDE 2.x icons.
